[package]
name = "rs_ddg_images"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "duck"
path = "src/main.rs"

[dependencies]
argh = "0.1.6"
reqwest = { version = "0.11.4", features = ["json", "gzip"] }
image = "0.23.14"
failure = "0.1.8"
tempfile = "3.2.0"
tokio = { version = "1.11.0", features = ["full"] }
regex = "1.5.4"
serde = { version = "1.0.130", features = ["derive"] }
convert_case = "0.4.0"